<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/TopLevel" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<FrameLayout android:id="@+id/TableFrame"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="0.8">
		<ScrollView android:id="@+id/TableScroller"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:paddingRight="12dip">
			<TableLayout android:id="@+id/ShotTable"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:stretchColumns="0,1,2">
				<TableRow android:id="@+id/ShotTableHeader"
					android:layout_width="fill_parent" android:layout_height="wrap_content">
					<TextView android:text="@string/T_SHOT_NUM_HEADER"
						android:padding="3dip" />
					<TextView android:text="@string/T_SHOT_TIME"
						android:padding="3dip" />
					<TextView android:text="@string/T_SHOT_SPLIT"
						android:padding="3dip" />
				</TableRow>
				<View android:layout_height="2dip" android:background="#FF909090"
					android:layout_width="fill_parent" />
			</TableLayout>
		</ScrollView>

		<SlidingDrawer android:layout_height="wrap_content"
			android:handle="@+id/OptionDrawerHandle" android:content="@+id/OptionDrawerContent"
			android:id="@+id/OptionDrawer" android:orientation="horizontal"
			android:layout_width="fill_parent">
			<View android:id="@id/OptionDrawerHandle" android:layout_height="fill_parent"
				android:background="#708090" android:layout_width="12dip" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:id="@id/OptionDrawerContent"
				android:background="#000000" android:orientation="vertical">
                <LinearLayout android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:gravity="center"
                        android:text="System Volume\n Buzzer will not be louder then this\n Effects system wide alarm volume" />
                    <SeekBar android:layout_width="fill_parent" android:id="@+id/SystemVolumeBar"
                        android:layout_height="wrap_content" android:paddingLeft="15dip"
                        android:paddingRight="15dip" android:max="100" />
                    <TextView android:layout_width="fill_parent" android:id="@+id/SystemVolumeValue"
                        android:layout_height="wrap_content" android:gravity="center"
                        android:text="" />
                </LinearLayout>
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="Buzzer Volume (%0-100)" />
					<SeekBar android:layout_width="fill_parent" android:id="@+id/BuzzerVolumeBar"
						android:layout_height="wrap_content" android:paddingLeft="15dip"
						android:paddingRight="15dip" android:max="100" />
					<TextView android:layout_width="fill_parent" android:id="@+id/BuzzerVolumeValue"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="" />
				</LinearLayout>
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="Delay (0-10 seconds)" />
					<SeekBar android:layout_width="fill_parent" android:id="@+id/BuzzerDelayBar"
						android:layout_height="wrap_content" android:paddingLeft="15dip"
						android:paddingRight="15dip" android:max="10" />
					<TextView android:layout_width="fill_parent" android:id="@+id/DelayValue"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="" />
					<CheckBox android:id="@+id/RandomStart"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="Random Start 2s - specified delay" />
				</LinearLayout>
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="Sensitivity (0-50), lower is more sensitive" />
					<SeekBar android:layout_width="fill_parent" android:id="@+id/SensitivityBar"
						android:layout_height="wrap_content" android:paddingLeft="15dip"
						android:paddingRight="15dip" android:max="50" />
					<TextView android:layout_width="fill_parent" android:id="@+id/SensitivityValue"
						android:layout_height="wrap_content" android:gravity="center"
						android:text="" />
				</LinearLayout>

			</LinearLayout>
		</SlidingDrawer>
	</FrameLayout>
	<View android:layout_height="2dip" android:background="#FF909090"
		android:layout_width="fill_parent" />

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center" android:layout_weight="0.2">
		<Button android:id="@+id/EndButton" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/T_END"></Button>
		<Button android:id="@+id/BuzzButton" android:layout_width="200dp"
			android:layout_height="wrap_content" android:text="@string/T_BUZZ"></Button>
		<Button android:id="@+id/QuitButton" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/T_QUIT"></Button>
	</LinearLayout>



</LinearLayout>
